--- a/locales/de.json
+++ b/locales/de.json
@@ -26,8 +26,8 @@
     "history_more_entries": "...und {count} weitere",
     "history_entry": "{species} in {regions} (Erstellt: {created}) - [ID: {id}]",
     "history_entry_completed": "{species} in {regions} (Erstellt: {created} | Benachrichtigt: {notified}) - [ID: {id}]",
-    "system_status": "**🤖 Bot-Status**\nUptime: {uptime}\n{server_count} server with {user_count} users \n\n**🔍 Datenbankstatus:** {integrity} \nGesamte Benachrichtigungen: {total} \n\n**📂 Shop-Daten:**\n {file_status}",
-    "system_performance": "**🚀 Performance**\n• ⏳ Latenz: `{latency} ms`\n• 🖥️ CPU-Auslastung: `{cpu}%`\n• 💾 RAM-Auslastung: `{ram}%`\n• 📡 Server: `{servers}` | 👥 Nutzer: `{users}`\n• ℹ️ System: `{system}`",
+    "system_status": "**🤖 Bot-Status**\n📡 Server: `{servers}` | 👥 Nutzer: `{users}` \n\n**🔍 Datenbankstatus:** {integrity} \nGesamte Benachrichtigungen: {total} \n\n**📂 Shop-Daten:**\n {file_status}",
+    "system_performance": "**🚀 Performance**\n• ⏳ Latenz: `{latency} ms`\n• 🖥️ CPU-Auslastung: `{cpu}%`\n• 💾 RAM-Auslastung: `{ram}%`\n• ℹ️ System: `{system}`",
     "system_file_status": "🔄 Datei zuletzt aktualisiert: {modified} (vor {age})",
     "system_file_missing": "❌ Datei nicht gefunden",
     "system_error": "❌ Fehler beim Abrufen des Status",
@@ -36,9 +36,9 @@
     "help_history": "`/history` - Zeigt deine Benachrichtigungshistorie",
     "help_test": "`/testnotification` - Testet PN-Benachrichtigungen",
     "help_delete": "`/delete_notifications` - Löscht mehrere Benachrichtigungen",
-    "help_stats": "`/stats` - Zeigt Statistiken (Admin)",
-    "help_system": "`/system` - Systemstatus (Admin)",
-    "help_startup": "`/startup` – Setzt Sprache und Kanal für diesen Server (Admin)",
+    "help_stats": "`/stats` - Zeigt Statistiken (Admin/Mod)",
+    "help_system": "`/system` - Systemstatus (Admin/Mod)",
+    "help_startup": "`/startup` – Setzt Sprache und Kanal für diesen Server (Admin/Mod)",
     "help_usersetting": "`/usersetting` – Verwalte deine persönlichen Einstellungen: Sprache für Bot-Antworten festlegen, Shops auf deine Blacklist setzen oder entfernen, deine Blacklist anzeigen und alle verfügbaren Shops auflisten.",
     "testnotification_success": "✅ Testnachricht gesendet!",
     "testnotification_dm": "📨 Testnachricht erfolgreich!",
@@ -65,8 +65,8 @@
     "shopmapping_show_entry": "- `{external}` → `{id}` ({shop})",
     "shopmapping_remove_success": "✅ Zuordnung für `{external}` gelöscht.",
     "shopmapping_remove_none": "ℹ️ Keine Zuordnung gefunden.",
-    "help_reloadshops": "/reloadshops — Shop-Daten aus der JSON-Datei neu laden",
-    "help_shopmapping": "/shopmapping — Shopnamen-Zuordnungen für Google Sheets-Importe verwalten!",
+    "help_reloadshops": "/reloadshops — Shop-Daten aus der JSON-Datei neu laden (Admin/Mod)",
+    "help_shopmapping": "/shopmapping — Shopnamen-Zuordnungen für Google Sheets-Importe verwalten! (nur AAM-Discord)",
     "serverlist_id": "🆔 ID",
     "serverlist_members": "👥 Mitglieder",
     "serverlist_icon": "🖼️ Icon",
@@ -78,5 +78,6 @@
     "serverlist_description": "📝 Beschreibung",
     "serverlist_no_description": "🚫 Keine Beschreibung",
     "serverlist_created": "📅 Erstellt am",
+    "help_showservers": "/serverlist - Zeige alle aktuelle Server, als geheime Nachricht (nur du kannst es sehen), die den Bot nutzen (nur für den Botbesitzer!)",
     "general_error": "❌ Ein Fehler ist aufgetreten"
 }
