--- a/locales/en.json
+++ b/locales/en.json
@@ -26,8 +26,8 @@
     "history_more_entries": "...and {count} more",
     "history_entry": "{species} in {regions} (Created: {created}) - [ID: {id}]",
     "history_entry_completed": "{species} in {regions} (Created: {created} | Notified: {notified}) - [ID: {id}]",
-    "system_status": "**🤖 Bot Status**\nUptime: {uptime}\n{server_count} Server mit {user_count} Usern \n\n**🔍 Database Status:** {integrity} \nTotal notifications: {total} \n\n**📂 Shop Data:**\n {file_status}",
-    "system_performance": "**🚀 Performance**\n• ⏳ Latency: `{latency} ms`\n• 🖥️ CPU usage: `{cpu}%`\n• 💾 RAM usage: `{ram}%`\n• 📡 Servers: `{servers}` | 👥 Users: `{users}`\n• ℹ️ System: `{system}`",
+    "system_status": "**🤖 Bot Status**\nUptime: {uptime}\n📡 Servers: `{servers}` | 👥 Users: `{users}` \n\n**🔍 Database Status:** {integrity} \nTotal notifications: {total} \n\n**📂 Shop Data:**\n {file_status}",
+    "system_performance": "**🚀 Performance**\n• ⏳ Latency: `{latency} ms`\n• 🖥️ CPU usage: `{cpu}%`\n• 💾 RAM usage: `{ram}%`\n• ℹ️ System: `{system}`",
     "system_file_status": "🔄 File last updated: {modified} (ago: {age})",
     "system_file_missing": "❌ File not found",
     "system_error": "❌ Error retrieving status",
@@ -36,9 +36,9 @@
     "help_history": "`/history` - Shows your notification history",
     "help_test": "`/testnotification` - Tests DM notifications",
     "help_delete": "`/delete_notifications` - Deletes multiple notifications",
-    "help_stats": "`/stats` - Shows statistics (Admin)",
-    "help_system": "`/system` - System status (Admin)",
-    "help_startup": "`/startup` – Sets language and channel for this server (Admin)",
+    "help_stats": "`/stats` - Shows statistics (Admin/Mod)",
+    "help_system": "`/system` - System status (Admin/Mod)",
+    "help_startup": "`/startup` – Sets language and channel for this server (Admin/Mod)",
     "help_usersetting": "`/usersetting` – Manage your personal settings: set your bot reply language, add or remove shops from your blacklist, view your blacklist, and list all available shops.",
     "testnotification_success": "✅ Test message sent!",
     "testnotification_dm": "📨 Test message successful!",
@@ -65,8 +65,8 @@
     "shopmapping_show_entry": "- `{external}` → `{id}` ({shop})",
     "shopmapping_remove_success": "✅ Mapping for `{external}` deleted.",
     "shopmapping_remove_none": "ℹ️ No mapping found.",
-	"help_reloadshops": "/reloadshops — Reload shop data from JSON file",
-    "help_shopmapping": "/shopmapping — Manage shop name mappings for Google Sheets imports!",
+    "help_reloadshops": "/reloadshops — Reload shop data from JSON file (Admin/Mod)",
+    "help_shopmapping": "/shopmapping — Manage shop name mappings for Google Sheets imports! (only AAM-Discord)",
     "serverlist_id": "🆔 ID",
     "serverlist_members": "👥 Members",
     "serverlist_icon": "🖼️ Icon",
@@ -78,5 +78,6 @@
     "serverlist_description": "📝 Description",
     "serverlist_no_description": "🚫 No description",
     "serverlist_created": "📅 Created at",
+    "help_showservers": "/serverlist - Show all current servers, as a private message (only you can see it), that use the bot (bot owner only!)",
     "general_error": "❌ An error has occurred"
 }
