--- a/locales/eo.json
+++ b/locales/eo.json
@@ -26,8 +26,8 @@
     "history_more_entries": "...kaj {count} pliaj",
     "history_entry": "{species} en {regions} (Kreita: {created}) - [ID: {id}]",
     "history_entry_completed": "{species} en {regions} (Kreita: {created} | Sciigita: {notified}) - [ID: {id}]",
-    "system_status": "**🤖 Bot-stato**\nUptime: {uptime}\n{server_count} serviloj kun {user_count} uzantoj \n\n**🔍 Datumbaza stato:** {integrity} \nTotalaj sciigoj: {total} \n\n**📂 Butikaj datumoj:**\n {file_status}",
-    "system_performance": "**🚀 Prezentado**\n• ⏳ Latenco: `{latency} ms`\n• 🖥️ CPU-uzado: `{cpu}%`\n• 💾 RAM-uzado: `{ram}%`\n• 📡 Serviloj: `{servers}` | 👥 Uzantoj: `{users}`\n• ℹ️ Sistemo: `{system}`",
+    "system_status": "**🤖 Bot-stato**\nUptime: {uptime}\n📡 Serviloj: `{servers}` | 👥 Uzantoj: `{users}` \n\n**🔍 Datumbaza stato:** {integrity} \nTotalaj sciigoj: {total} \n\n**📂 Butikaj datumoj:**\n {file_status}",
+    "system_performance": "**🚀 Prezentado**\n• ⏳ Latenco: `{latency} ms`\n• 🖥️ CPU-uzado: `{cpu}%`\n• 💾 RAM-uzado: `{ram}%`\n• ℹ️ Sistemo: `{system}`",
     "system_file_status": "🔄 Dosiero laste ĝisdatigita: {modified} (antaŭ {age})",
     "system_file_missing": "❌ Dosiero ne trovita",
     "system_error": "❌ Eraro dum ricevo de stato",
@@ -36,9 +36,9 @@
     "help_history": "`/history` - Montras vian sciighistorion",
     "help_test": "`/testnotification` - Testas PN-sciigojn",
     "help_delete": "`/delete_notifications` - Forigas plurajn sciigojn",
-    "help_stats": "`/stats` - Montras statistikojn (Admin)",
-    "help_system": "`/system` - Sistemo-stato (Admin)",
-    "help_startup": "`/startup` – Agordas lingvon kaj kanalon por ĉi tiu servilo (Admin)",
+    "help_stats": "`/stats` - Montras statistikojn (Admin/Mod)",
+    "help_system": "`/system` - Sistemo-stato (Admin/Mod)",
+    "help_startup": "`/startup` – Agordas lingvon kaj kanalon por ĉi tiu servilo (Admin/Mod)",
     "help_usersetting": "`/usersetting` – Administru viajn personajn agordojn: elektu la lingvon por bot-respondoj, aldonu aŭ forigu butikojn el via nigralisto, vidu vian nigraliston kaj listigu ĉiujn disponeblajn butikojn.",
     "testnotification_success": "✅ Testmesaĝo sendita!",
     "testnotification_dm": "📨 Testmesaĝo sukcesa!",
@@ -65,8 +65,8 @@
     "shopmapping_show_entry": "- `{external}` → `{id}` ({shop})",
     "shopmapping_remove_success": "✅ Mapado por `{external}` forigita.",
     "shopmapping_remove_none": "ℹ️ Neniu mapado trovita.",
-    "help_reloadshops": "/reloadshops — Reŝargi butiko-datumojn el JSON-dosiero",
-    "help_shopmapping": "/shopmapping — Administri butikonoma mapojn por Google Sheets-importoj!",
+    "help_reloadshops": "/reloadshops — Reŝargi butiko-datumojn el JSON-dosiero (Admin/Mod)",
+    "help_shopmapping": "/shopmapping — Administri butikonoma mapojn por Google Sheets-importoj! (nur AAM-Discord)",
     "serverlist_id": "🆔 ID",
     "serverlist_members": "👥 Uzantoj",
     "serverlist_icon": "🖼️ Piktogramo",
@@ -78,5 +78,6 @@
     "serverlist_description": "📝 Priskribo",
     "serverlist_no_description": "🚫 Neniu priskribo",
     "serverlist_created": "📅 Kreita je",
+    "help_showservers": "/serverlist - Montru ĉiujn nunajn servilojn, kiel sekreta mesaĝo (nur vi povas vidi ĝin), kiuj uzas la bot-on (nur por la bot-posedanto!)",
     "general_error": "❌ Okazis eraro"
 }
