fix help strings

--- a/locales/de.json
+++ b/locales/de.json
@@ -65,8 +65,8 @@
     "shopmapping_show_entry": "- `{external}` → `{id}` ({shop})",
     "shopmapping_remove_success": "✅ Zuordnung für `{external}` gelöscht.",
     "shopmapping_remove_none": "ℹ️ Keine Zuordnung gefunden.",
-    "help_reloadshops": "/reloadshops — Shop-Daten aus der JSON-Datei neu laden (Admin/Mod)",
-    "help_shopmapping": "/shopmapping — Shopnamen-Zuordnungen für Google Sheets-Importe verwalten! (nur AAM-Discord)",
+    "help_reloadshops": "`/reloadshops` — Shop-Daten aus der JSON-Datei neu laden (Admin/Mod)",
+    "help_shopmapping": "`/shopmapping` — Shopnamen-Zuordnungen für Google Sheets-Importe verwalten! (nur AAM-Discord)",
     "serverlist_id": "🆔 ID",
     "serverlist_members": "👥 Mitglieder",
     "serverlist_icon": "🖼️ Icon",
@@ -78,7 +78,7 @@
     "serverlist_description": "📝 Beschreibung",
     "serverlist_no_description": "🚫 Keine Beschreibung",
     "serverlist_created": "📅 Erstellt am",
-    "help_showservers": "/serverlist - Zeige alle aktuelle Server, als geheime Nachricht (nur du kannst es sehen), die den Bot nutzen (nur für den Botbesitzer!)",
+    "help_showservers": "`/serverlist` - Zeige alle aktuelle Server, als geheime Nachricht (nur du kannst es sehen), die den Bot nutzen (nur für den Botbesitzer!)",
     "data_export_success": "Deine exportierten Daten im Anhang 📎",
     "data_export_dm_sent": "Die Daten wurden dir per PN gesendet ✅",
     "data_export_error": "Fehler beim Export ❌ Bitte versuche es später erneut",
@@ -92,7 +92,7 @@
     "ch_notification_error": "⚠️ CH-Lieferliste nicht gefunden",
     "notification_set_swiss": "✅ Benachrichtigung für {species} (CH-Lieferung) aktiviert!",
     "no_shops_found": "❌ Keine Shops gefunden.",
-    "help_export": "/export_data – Exportiere alle deine gespeicherten Daten als JSON-Datei.",
-    "help_ch_mapping": "/ch_delivery – Verwalte die Liste der Shops, die in die Schweiz liefern (nur für AAM-Discord).",
+    "help_export": "`/export_data` – Exportiere alle deine gespeicherten Daten als JSON-Datei.",
+    "help_ch_mapping": "`/ch_delivery` – Verwalte die Liste der Shops, die in die Schweiz liefern (nur für AAM-Discord).",
     "general_error": "❌ Ein Fehler ist aufgetreten"
 }
