--- a/locales/en.json
+++ b/locales/en.json
@@ -44,7 +44,7 @@
     "testnotification_dm": "📨 Test message successful!",
     "testnotification_forbidden": "❌ Could not send DM – please enable private messages",
     "availability_header": "🔔 **Availability Alert** for {species}!",
-    "availability_entry": "🏪 **Shop:** {shop} - [AAM-Rating](<https://docs.google.com/spreadsheets/d/1Ymc8M5GHwfKbdh0QMRhZhL5zUK2wMRua0vk6v1MxiYE/edit?usp=sharing>): {rating} \n💶 **Price range:** {min_price}-{max_price}{currency} \n🔗 [Product link](<{product_url}>) | 🏠 [Shop homepage](<{shop_url}>)",
+    "availability_entry": "🏪 **Shop:** {shop} - [AAM-Rating](<https://docs.google.com/spreadsheets/d/1Ymc8M5GHwfKbdh0QMRhZhL5zUK2wMRua0vk6v1MxiYE/edit?usp=sharing>): {rating} \n🐜 - **{species}** \n💶 **Price range:** {min_price}-{max_price}{currency} \n🔗 [Product link](<{product_url}>) | 🏠 [Shop homepage](<{shop_url}>)",
     "all_channels": "all channels",
     "notification_expired_dm": "Your search for {species} ({regions}) has expired and is no longer being monitored. You can create a new notification at any time.",
     "dm_failed": "I couldn't send you a private message. Please enable your direct messages to receive notifications!",
